fixed several issues

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -39,7 +39,7 @@
             <div>
                 <div class="one-line">
                     <img class="icon" src="img/view-dashboard.svg" alt="dashboard" height="50" width="50">
-                    <h3>Dashboard</h3>
+                    <h3> <a href="">Dashboard</a></h3>
                 </div>
             </div>
 
@@ -132,6 +132,7 @@
                             <img src="img/eye-plus-outline.svg" alt="star" width="30" height="30">
                             <img src="img/source-fork.svg" alt="star" width="30" height="30">
                         </div>
+
                     </div>
                     </div>
                 
