--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="user-info">
                 <img class="top-icon" src="img/bell.svg" alt="bell icon" width="30" height="30">
                 <img class="top-icon" src="img/face-man-profile.svg" alt="profile pic" width="30" height="30">
-                <h4>Gooby Gorby</h4>
+                <h4>Eric Laskowski</h4>
             </div>
             
             <div class="greeting">
